first review fixes